--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: 'IBM Plex Mono', monospace;
@@ -40,6 +39,56 @@ canvas {
   right: 100vw;
 }
 
-* {
-  font-family: sans-serif;
+#info {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 0 1rem 0 1rem;
+  z-index: 200;
+/*   background-color: rgba(255,255,255,0.6); */
+  max-width: 100vw;
+}
+
+#info-inner {
+  padding-bottom: 1rem;
+}
+
+@media only screen and (min-width: 400px) {
+  body {
+    font-size: 0.8rem;
+  }
+  #info {
+/*     padding: 2rem; */
+    max-width: 50vw;
+  }
+}
+#info a {
+  color: black;
+}
+
+#close {
+  background: transparent;
+  border: 2px solid transparent;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 100%;
+  padding: 5px 0;
+}
+#cam-toggle {
+  background: yellow;
+  border: 2px solid transparent;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 100%;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
+#close:focus, #cam-toggle:focus {
+  outline: none;
+  border-bottom: 2px solid magenta;
+}
+#cam-toggle.active, #cam-toggle.active:focus {
+  background: cyan;
+}
+.hidden {
+  display:none;
 }
